tests/negative/runtime/exec_empty_env_entry/input.ci
void main() {
    ExecResult r = exec(["echo", "hi"], [""]);
    print(toString(execStatus(r)) + "\n");
}
